force-app/main/default/objects/Report_Card__c/fields/Academic_Term__c.field-meta.xml
<CustomField>
    <fullName>Academic_Term__c</fullName>
    <label>Academic Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2022-1</fullName>
            </value>
            <value>
                <fullName>2022-2</fullName>
            </value>
            <value>
                <fullName>2023-1</fullName>
            </value>
            <value>
                <fullName>2023-2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>