force-app/main/default/objects/Report_Card__c/fields/Average__c.field-meta.xml
<CustomField>
    <fullName>Average__c</fullName>
    <formula>( Maths__c + English__c + Geography__c + History__c )/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>