force-app/main/default/objects/Report_Card__c/fields/History__c.field-meta.xml
<CustomField>
    <fullName>History__c</fullName>
    <label>History</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>