force-app/main/default/objects/Report_Card__c/fields/Maths__c.field-meta.xml
<CustomField>
    <fullName>Maths__c</fullName>
    <label>Math</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>